# todo-cli-python

./: .gitignore  README.md  pyproject.toml  requirements.txt
todo_cli/: __init__.py  controllers.py  main.py  models.py  storage.py  ui.py
